--- a/player.html
+++ b/player.html
@@ -11,49 +11,82 @@
     <title> Video Player </title>
   </head>
 
-  <body>
-    <video controls id="vid" class="hide fulltab">
-      <source src="#" id="source-vid"></source>
-      <track src="#" id="track-sub" default></track>
-    </video>
-    <div class="container" id="go-form">
-      <div class="row center top-offset">
-	<div class="col s12 m8 l6 offset-l3 offset-m2">
-	  <div class="card blue-grey darken-1 ">
-            <div class="card-content">
-              <form action="#">
-		<div class="file-field input-field">
-		  <div class="btn">
-		    <span>Video</span>
-		    <input type="file" id="video-file" accept="video/*">
-		  </div>
-		  <div class="file-path-wrapper">
-		    <input class="file-path validate white-text" type="text" placeholder="Select a video file">
-		  </div>
-		</div>
-		<div class="file-field input-field">
-		  <div class="btn">
-		    <span>Subtitles</span>
-		    <input type="file" id="subtitle-file" accept=".vtt,.srt">
-		  </div>
-		  <div class="file-path-wrapper">
-		    <input class="file-path validate white-text" type="text" placeholder="Select a subtitle track">
-		  </div>
-		</div>
-		<a class="waves-effect waves-light btn" id="go-btn">
-		  <i class="material-icons left">play_arrow</i>Play!
-		</a>
-	      </form>
-            </div>
 
+  <ul id="slide-out" class="sidenav sidenav-fixed">
+    <li><div class="user-view">
+	<div class="background teal">
+	</div>
+	<h3 class="header light white-text">Playlist</h3>
+	<br/>
+    </div></li>
+
+    <ul id="playlist">
+    </ul>
+    <li><div class="divider"></div></li>
+    <li>
+      <form>
+	<div class="file-field input-field">
+
+	    <input type="file" id="playlist-files"  multiple>
+	  <div class="file-path-wrapper">
+	    <input class="file-path validate" type="text" placeholder="Select files">
+	  </div>
+	</div>
+      </form>
+    </li>
+    <li><a class="btn" id="add-playlist"> Add to playlist</a></li>
+    <li><div class="divider"></div></li>
+    <li class="center"><span class="waves-effect control-btn"><i class="material-icons">skip_previous</i></span>
+      <span class="waves-effect control-btn" id="play_playlist"> <i class="material-icons" >play_arrow</i></span>
+      <span class="waves-effect control-btn"> <i class="material-icons" >skip_next</i></span> </li>
+  </ul>
+     <video controls id="vid" class="hide fulltab">
+	<source src="#" id="source-vid"></source>
+	<track src="#" id="track-sub" default></track>
+      </video>
+  <main>
+    <body>
+   
+      <div class="container" id="go-form">
+	<div class="row center top-offset">
+	  <div class="col s12 m8 l5 offset-m2">
+	    <div class="card blue-grey darken-1 ">
+              <div class="card-content">
+		<form action="#">
+		  <div class="file-field input-field">
+		    <div class="btn">
+		      <span>Video</span>
+		      <input type="file" id="video-file" accept="video/*">
+		    </div>
+		    <div class="file-path-wrapper">
+		      <input class="file-path validate white-text" type="text" placeholder="Select a video file">
+		    </div>
+		  </div>
+		  <div class="file-field input-field">
+		    <div class="btn">
+		      <span>Subtitles</span>
+		      <input type="file" id="subtitle-file" accept=".vtt,.srt">
+		    </div>
+		    <div class="file-path-wrapper">
+		      <input class="file-path validate white-text" type="text" placeholder="Select a subtitle track">
+		    </div>
+		  </div>
+		  <a class="waves-effect waves-light btn" id="go-btn">
+		    <i class="material-icons left">play_arrow</i>Play!
+		  </a>
+		</form>
+              </div>
+
+	    </div>
 	  </div>
 	</div>
       </div>
-    </div>
-    
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/player.js"></script>
-  </body>
+      
+      <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/jquery.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script src="js/dropzone.js"></script>
+      <script type="text/javascript" src="js/player.js"></script>
+    </body>
+  </main>
 </html>
