few fixes here and there

--- a/player.html
+++ b/player.html
@@ -41,7 +41,7 @@
       <span class="waves-effect control-btn"> <i class="material-icons" >skip_next</i></span> </li>
   </ul>
      <video controls id="vid" class="hide fulltab">
-	<source src="#" id="source-vid"></source>
+	<source src="#" id="source-vid" type="video/mp4"></source>
 	<track src="#" id="track-sub" default></track>
       </video>
   <main>
